--- a/MapViewer.Emulation/MapViewer.Emulation.csproj
+++ b/MapViewer.Emulation/MapViewer.Emulation.csproj
@@ -98,6 +98,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmulatorView.cs" />
     <Compile Include="Modules\EmulationBasicsInterfaceModule.cs" />
     <Compile Include="Modules\EmulationBasicsServicesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
