--- a/EMapNavigator/EMapNavigator.csproj
+++ b/EMapNavigator/EMapNavigator.csproj
@@ -55,6 +55,10 @@
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Prism, Version=6.1.0.0, Culture=neutral, PublicKeyToken=91a96d2a154366d8, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.Core.6.1.0\lib\net45\Prism.dll</HintPath>
       <Private>True</Private>
@@ -123,6 +127,11 @@
     <Compile Include="Modules\MainInterfaceModule.cs" />
     <Compile Include="Modules\MappingInterfaceModule.cs" />
     <Compile Include="Modules\MappingServicesModule.cs" />
+    <Compile Include="Modules\SettingsModule.cs" />
+    <Compile Include="Settings\Implementations\UserSettings.cs" />
+    <Compile Include="Settings\Implementations\JsonUserSettingsFactory.cs" />
+    <Compile Include="Settings\Interfaces\IMapPositionSettings.cs" />
+    <Compile Include="Settings\Interfaces\ISettingsFactory.cs" />
     <Compile Include="ViewModels\MapViewModel.cs" />
     <Compile Include="ViewModels\WheelViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
@@ -227,6 +236,7 @@
   <ItemGroup>
     <Resource Include="icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
