--- a/MapViewer.Emulation.Msul/MapViewer.Emulation.Msul.csproj
+++ b/MapViewer.Emulation.Msul/MapViewer.Emulation.Msul.csproj
@@ -123,6 +123,7 @@
       <DependentUpon>CarriageParametersModel.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Controls\Carriage.cs" />
+    <Compile Include="Views\Converters\IpAddressToStringValueConverter.cs" />
     <Compile Include="Views\MsulEmulationParametersView.xaml.cs">
       <DependentUpon>MsulEmulationParametersView.xaml</DependentUpon>
     </Compile>
