--- a/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
+++ b/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BlokEmulationParameters.cs" />
     <Compile Include="ViewModels\BlokEmulationViewModel.cs" />
+    <Compile Include="ViewModels\EmissionDescriptorViewModel.cs" />
     <Compile Include="Views\BlokEmulationView.xaml.cs">
       <DependentUpon>BlokEmulationView.xaml</DependentUpon>
     </Compile>
