--- a/BlokMap/BlokMap.csproj
+++ b/BlokMap/BlokMap.csproj
@@ -108,6 +108,7 @@
     <Compile Include="MapElements\MapObjectElements\MapPlatformElement.cs" />
     <Compile Include="MapElements\MapObjectElements\MapTrafficLightElement.cs" />
     <Compile Include="MapElements\MapObjectElements\MapUnknownObjectElement.cs" />
+    <Compile Include="MapElements\SearchHighlightMapElement.cs" />
     <Compile Include="MapLoadingService.cs" />
     <Compile Include="MapPresenter.cs" />
     <Compile Include="Modules\BlokMapInterfaceModule.cs" />
