--- a/MapViewer.Shared/packages.config
+++ b/MapViewer.Shared/packages.config
@@ -5,5 +5,8 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Prism.Core" version="6.1.0" targetFramework="net45" />
   <package id="Prism.Wpf" version="6.1.0" targetFramework="net45" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
 </packages>
